Update cargo metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ resolver = "2"
 [workspace.package]
 version = "0.1.0"
 edition = "2021"
-homepage = "https://github.com/junction-labs/junction-client"
 rust-version = "1.79"
+homepage = "https://junctionlabs.io"
+repository = "https://github.com/junction-labs/junction-client"
+license = "Apache-2.0"
 
 [workspace.dependencies]
 arc-swap = "1.7"
