--- a/crates/junction-core/Cargo.toml
+++ b/crates/junction-core/Cargo.toml
@@ -2,6 +2,17 @@
 name = "junction-core"
 version = "0.1.0"
 edition = "2021"
+description = """
+Dynamically configurable HTTP service discovery
+"""
+homepage.workspace = true
+repository.workspace = true
+license.workspace = true
+categories = [
+    "api-bindings",
+    "network-programming",
+    "web-programming::http-client",
+]
 
 [dependencies]
 arc-swap = { workspace = true }
