--- a/crates/junction-typeinfo/Cargo.toml
+++ b/crates/junction-typeinfo/Cargo.toml
@@ -3,6 +3,11 @@ name = "junction-typeinfo"
 version.workspace = true
 edition.workspace = true
 homepage.workspace = true
+repository.workspace = true
+license.workspace = true
+description = """
+reflection for junction API generation
+"""
 
 [dependencies]
 junction-typeinfo-derive = { workspace = true }
