--- a/crates/junction-api/Cargo.toml
+++ b/crates/junction-api/Cargo.toml
@@ -15,6 +15,7 @@ http = { workspace = true }
 regex = { workspace = true }
 serde = { workspace = true, default-features = false, features = ["derive"] }
 serde_json = { workspace = true }
+smol_str = { workspace = true }
 thiserror = { workspace = true }
 once_cell = { workspace = true }
 
