--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ default-members = ["crates/*"]
 resolver = "2"
 
 [workspace.package]
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 rust-version = "1.79"
 homepage = "https://junctionlabs.io"
@@ -39,7 +39,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 xds-api = { version = "0.1", default-features = false }
 xxhash-rust = { version = "0.8.12", features = ["xxh64"] }
 
-junction-api = { path = "crates/junction-api" }
-junction-core = { path = "crates/junction-core" }
-junction-typeinfo = { path = "crates/junction-typeinfo" }
-junction-typeinfo-derive = { path = "crates/junction-typeinfo-derive" }
+junction-api = { version = "0.2.0", path = "crates/junction-api" }
+junction-core = { version = "0.2.0", path = "crates/junction-core" }
+junction-typeinfo = { version = "0.2.0", path = "crates/junction-typeinfo" }
+junction-typeinfo-derive = { version = "0.2.0", path = "crates/junction-typeinfo-derive" }
