--- a/crates/junction-typeinfo/Cargo.toml
+++ b/crates/junction-typeinfo/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "junction-typeinfo"
-version.workspace = true
+version = "0.2.0"
 edition.workspace = true
 homepage.workspace = true
 repository.workspace = true
