--- a/junction-node/platforms/linux-x64-gnu/package.json
+++ b/junction-node/platforms/linux-x64-gnu/package.json
@@ -2,16 +2,10 @@
   "name": "@junction-labs/client-linux-x64-gnu",
   "description": "Prebuilt binary package for `@junction-labs/client` on `linux-x64-gnu`.",
   "version": "0.1.0",
-  "os": [
-    "linux"
-  ],
-  "cpu": [
-    "x64"
-  ],
+  "os": ["linux"],
+  "cpu": ["x64"],
   "main": "index.node",
-  "files": [
-    "index.node"
-  ],
+  "files": ["index.node"],
   "neon": {
     "type": "binary",
     "rust": "x86_64-unknown-linux-gnu",
