--- a/junction-node/tsconfig.json
+++ b/junction-node/tsconfig.json
@@ -5,12 +5,7 @@
     "declaration": true,
     "outDir": "./lib",
     "rootDir": "./ts",
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-    ]
+    "lib": ["DOM", "DOM.Iterable"]
   },
-  "exclude": [
-    "lib"
-  ]
+  "exclude": ["lib"]
 }
