junction-python: make pyproject.toml version dynamic, fix bindings
maturin updated to require that pyproject.toml has a version. it's
allowed to be dynamically generated as long as you explicitly specify
that.

also picks up some doc changes to config.py that should have gotten
picked up in 4689d7b.

--- a/junction-python/pyproject.toml
+++ b/junction-python/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Rust",
 ]
+dynamic = ["version"]
 
 [project.urls]
 Homepage = "https://junctionlabs.io"
