junction-node: implement fetch
implement a fetch function backed by Junction. internally,
junction.fetch uses a junction core client to resolve routes and setup
retries/timeouts etc.

--- a/junction-node/tsconfig.json
+++ b/junction-node/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
-    "module": "node16",
+    "module": "nodenext",
     "declaration": true,
+    "removeComments": false,
     "outDir": "./lib",
     "rootDir": "./ts",
-    "lib": ["DOM", "DOM.Iterable"]
+    "lib": ["es2022", "DOM", "DOM.Iterable"]
   },
   "exclude": ["lib"]
 }
