--- a/junction-node/package.json
+++ b/junction-node/package.json
@@ -44,7 +44,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@neon-rs/load": "^0.1.82"
+    "@neon-rs/load": "^0.1.82",
+    "undici": "^7.2.0"
   },
   "repository": {
     "type": "git",
