--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -88,9 +88,12 @@ jobs:
           kubectl rollout status --watch -n default deploy/jct-http-server-feature-1
           kubectl rollout status --watch -n junction deploy/ezbake
           sleep 5 # this is a load-bearing sleep, we're waiting for ezbake to settle down
-      - name: run test
+      - name: run tests static mode
         run: |
           kubectl run jct-client --image=jct_http_client:latest --image-pull-policy=IfNotPresent --env="JUNCTION_ADS_SERVER=grpc://ezbake.junction.svc.cluster.local:8008" --restart=Never --attach
+      - name: run tests gateway api mode
+        run: |
+          kubectl run jct-client --image=jct_http_client:latest --image-pull-policy=IfNotPresent --env="JUNCTION_ADS_SERVER=grpc://ezbake.junction.svc.cluster.local:8008" --restart=Never --attach --use-gateway-api
       - name: debug state
         if: ${{ ! cancelled() }}
         run: |
