--- a/junction-python/requirements-dev.txt
+++ b/junction-python/requirements-dev.txt
@@ -5,6 +5,7 @@
 
 maturin
 pip
+pyyaml # only needed for the smoke tests
 
 # pinned so upgrades don't interrupt development with formatting changes
 ruff==0.6.3
