--- a/junction-python/samples/routing-and-load-balancing/Dockerfile-client
+++ b/junction-python/samples/routing-and-load-balancing/Dockerfile-client
@@ -15,5 +15,8 @@ RUN python -m venv .venv
 RUN .venv/bin/pip install --upgrade pip
 RUN .venv/bin/pip install pyyaml
 RUN .venv/bin/pip install *.whl
+RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+RUN chmod +x ./kubectl
+RUN mv ./kubectl /usr/local/bin
 ADD junction-python/samples/routing-and-load-balancing/client.py .
 ENTRYPOINT [".venv/bin/python", "./client.py"]
