--- a/junction-node/platforms/darwin-arm64/package.json
+++ b/junction-node/platforms/darwin-arm64/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@junction-labs/client-darwin-arm64",
   "description": "Prebuilt binary package for `@junction-labs/client` on `darwin-arm64`.",
-  "version": "0.1.0",
+  "version": "0.2.2",
   "os": ["darwin"],
   "cpu": ["arm64"],
   "main": "index.node",
@@ -17,7 +17,7 @@
   "author": "",
   "repository": {
     "type": "git",
-    "url": "github.com/junction-labs/junction-client"
+    "url": "https://github.com/junction-labs/junction-client"
   },
   "license": "Apache-2.0"
 }
