--- a/.github/workflows/release-python.yaml
+++ b/.github/workflows/release-python.yaml
@@ -30,6 +30,9 @@ jobs:
             target: aarch64
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.sha }}
+
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
@@ -38,7 +41,7 @@ jobs:
         with:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --manifest-path junction-python/Cargo.toml
-          sccache: 'true'
+          sccache: "true"
           # cargo culted from Polars. this is probably this ring issue:
           #
           # https://github.com/pola-rs/polars/blob/abe5139f471f7b63104490813d316fc8497373c1/.github/workflows/release-python.yml#L200
@@ -69,7 +72,7 @@ jobs:
         with:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --manifest-path junction-python/Cargo.toml
-          sccache: 'true'
+          sccache: "true"
           manylinux: musllinux_1_2
       - name: upload wheels
         uses: actions/upload-artifact@v4
@@ -95,7 +98,7 @@ jobs:
         with:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --manifest-path junction-python/Cargo.toml
-          sccache: 'true'
+          sccache: "true"
       - name: upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -121,7 +124,7 @@ jobs:
         with:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --manifest-path junction-python/Cargo.toml
-          sccache: 'true'
+          sccache: "true"
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
