--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -9,14 +9,14 @@ name: smoke test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
     paths:
       - "junction-python/**"
       - "crates/**"
       - ".github/workflows/smoke-test.yml"
 
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
     paths:
       - "junction-python/**"
       - "crates/**"
@@ -31,22 +31,22 @@ jobs:
   build-wheel:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: 3.x
-    - name: build wheels
-      uses: PyO3/maturin-action@v1
-      with:
-        target: x86_64
-        args: --release --out dist --manifest-path junction-python/Cargo.toml
-        sccache: 'true'
-        manylinux: auto
-    - name: upload wheels
-      uses: actions/upload-artifact@v4
-      with:
-        name: wheels-linux-x86_64
-        path: dist/*.whl
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+      - name: build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          target: x86_64
+          args: --release --out dist --manifest-path junction-python/Cargo.toml
+          sccache: "true"
+          manylinux: auto
+      - name: upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-linux-x86_64
+          path: dist/*.whl
 
   smoke-test:
     runs-on: ubuntu-latest
@@ -65,41 +65,35 @@ jobs:
             --agents 1
             --no-lb
             --k3s-arg "--no-deploy=traefik,servicelb,metrics-server@server:*"
-      - name: build server
+      - name: build docker image
         run: |
-          docker build --tag jct_http_server:latest \
-              --file junction-python/samples/routing-and-load-balancing/Dockerfile-server .
-          k3d image import jct_http_server:latest -c test-cluster
-      - name: build client
-        run: |
-          docker build --tag jct_http_client:latest \
-            --file junction-python/samples/routing-and-load-balancing/Dockerfile-client . \
+          docker build --tag jct_simple_app:latest \
+            --file junction-python/samples/smoke-test/Dockerfile . \
             --build-arg junction_wheel=dist/**/*.whl
-          k3d image import jct_http_client:latest -c test-cluster
+          k3d image import jct_simple_app:latest -c test-cluster
       - name: set up kube manifests
         run: |
           kubectl apply -f https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.2.0/experimental-install.yaml
-          kubectl apply -f junction-python/samples/routing-and-load-balancing/client_cluster_role_binding.yml
-          kubectl apply -f junction-python/samples/routing-and-load-balancing/latest_ezbake.yml
-          kubectl apply -f junction-python/samples/routing-and-load-balancing/jct_http_server.yml
-          kubectl apply -f junction-python/samples/routing-and-load-balancing/jct_http_server_feature_1.yml
+          kubectl apply -f https://github.com/junction-labs/ezbake/releases/latest/download/install-for-cluster.yml
+          kubectl apply -f junction-python/samples/smoke-test/deploy/client-cluster-role-binding.yml
+          kubectl apply -f junction-python/samples/smoke-test/deploy/jct-simple-app.yml
       - name: wait for rollouts
         run: |
-          kubectl rollout status --watch -n default deploy/jct-http-server
-          kubectl rollout status --watch -n default deploy/jct-http-server-feature-1
+          kubectl rollout status --watch -n default deploy/jct-simple-app
+          kubectl rollout status --watch -n default deploy/jct-simple-app-v2
           kubectl rollout status --watch -n junction deploy/ezbake
           sleep 5 # this is a load-bearing sleep, we're waiting for ezbake to settle down
       - name: run tests static mode
         run: |
-          kubectl run jct-client --image=jct_http_client:latest --image-pull-policy=IfNotPresent --env="JUNCTION_ADS_SERVER=grpc://ezbake.junction.svc.cluster.local:8008" --restart=Never --attach
+          kubectl run jct-client --image=jct_simple_app:latest --image-pull-policy=IfNotPresent --env="JUNCTION_ADS_SERVER=grpc://ezbake.junction.svc.cluster.local:8008" --restart=Never --attach -- python /app/client.py
       - name: run tests gateway api mode
         run: |
-          kubectl run jct-client2 --image=jct_http_client:latest --image-pull-policy=IfNotPresent --env="JUNCTION_ADS_SERVER=grpc://ezbake.junction.svc.cluster.local:8008" --restart=Never --attach -- --use-gateway-api
+          kubectl run jct-client2 --image=jct_simple_app:latest --image-pull-policy=IfNotPresent --env="JUNCTION_ADS_SERVER=grpc://ezbake.junction.svc.cluster.local:8008" --restart=Never --attach -- python /app/client.py --use-gateway-api
       - name: debug state
         if: ${{ ! cancelled() }}
         run: |
-            docker images -a
-            docker ps -a
-            kubectl get pods -o wide --all-namespaces
-            kubectl get svc -o wide --all-namespaces
-            kubectl get po -n junction -o jsonpath='{.items[].metadata.name}' | xargs -IQ kubectl logs -n junction Q
+          docker images -a
+          docker ps -a
+          kubectl get pods -o wide --all-namespaces
+          kubectl get svc -o wide --all-namespaces
+          kubectl get po -n junction -o jsonpath='{.items[].metadata.name}' | xargs -IQ kubectl logs -n junction Q
