--- a/crates/junction-api/Cargo.toml
+++ b/crates/junction-api/Cargo.toml
@@ -3,8 +3,9 @@ name = "junction-api"
 version = "0.2.1"
 edition = "2021"
 description = """
-The Junction API
+Common API Types for Junction - an xDS dynamically-configurable API load-balancer library.
 """
+readme = "../README.md"
 homepage.workspace = true
 repository.workspace = true
 license.workspace = true
