--- a/crates/junction-core/Cargo.toml
+++ b/crates/junction-core/Cargo.toml
@@ -3,8 +3,9 @@ name = "junction-core"
 version = "0.2.1"
 edition = "2021"
 description = """
-Dynamically configurable HTTP service discovery
+The core implementation for Junction - an xDS dynamically-configurable API load-balancer library.
 """
+readme = "../README.md"
 homepage.workspace = true
 repository.workspace = true
 license.workspace = true
