--- a/docs/source/requirements.txt
+++ b/docs/source/requirements.txt
@@ -1,6 +1,6 @@
 mkdocs-material==9.5.27
 mkdocs-macros-plugin==1.2.0
 mkdocs-redirects==1.2.1
-material-plausible-plugin==0.2.0
+mkdocs-literate-nav
 markdown-exec[ansi]==1.9.3
 pygithub==2.4.0
