--- a/junction-node/biome.json
+++ b/junction-node/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["node_modules/", "lib/"]
+    "ignore": ["node_modules/", "lib/", "docs/"]
   },
   "formatter": {
     "enabled": true,
