Think I fixed picking up wheel.

--- a/junction-python/samples/smoke-test/Dockerfile
+++ b/junction-python/samples/smoke-test/Dockerfile
@@ -9,7 +9,7 @@ ARG junction_wheel=default[x]
 
 WORKDIR /app
 
-COPY ${junction_wheel} /app/
+COPY ${junction_wheel} .
 
 COPY junction-python/requirements-dev.txt requirements-dev.txt
 RUN pip install --upgrade uv
@@ -17,7 +17,7 @@ RUN uv pip install --system -r requirements-dev.txt
 ADD junction-python/samples/smoke-test/server.py .
 
 # extra stuff just for the client as having it in the same docker image is convenient
-RUN if [[ "$junction_wheel" != "default[x]" ]] ; then uv pip install --system *.whl ; else uv pip install --system junction-python ; fi
+RUN if [[ "$junction_wheel" = "default[x]" ]] ; then uv pip install --system junction-python ; else uv pip install --system *.whl ; fi
 
 RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
 RUN chmod +x ./kubectl
