--- a/junction-node/tsconfig.json
+++ b/junction-node/tsconfig.json
@@ -8,5 +8,15 @@
     "rootDir": "./ts",
     "lib": ["es2022", "DOM", "DOM.Iterable"]
   },
-  "exclude": ["lib"]
+  "exclude": ["lib"],
+  "typedocOptions": {
+    "entryPointStrategy": "expand",
+    "excludePrivate": true,
+    "excludeProtected": true,
+    "excludeExternals": true,
+    "categorizeByGroup": false,
+    "entryPoints": ["ts/core.cts", "ts/fetch.cts", "ts/load.cts"],
+    "out": "docs",
+    "sort": ["alphabetical"]
+  }
 }
