--- a/.github/workflows/docs-python.yml
+++ b/.github/workflows/docs-python.yml
@@ -19,7 +19,8 @@ env:
   rust_stable: stable
 
 concurrency:
-  group: ${{ github.job }}-${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 permissions:
   contents: write
