--- a/.github/workflows/junction-node-ci.yml
+++ b/.github/workflows/junction-node-ci.yml
@@ -51,7 +51,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - name: clippy
-        run: cargo xtask ci-clippy --crates junction-node
+        run: cargo xtask node lint
   rustfmt:
     runs-on: ubuntu-latest
     steps:
@@ -93,10 +93,10 @@ jobs:
           cache-dependency-path: junction-node/package-lock.json
 
       - name: build
-        run: cargo xtask node-build --clean-install
+        run: cargo xtask node build --clean-install
 
       - name: lint
-        run: cargo xtask node-lint
+        run: cargo xtask node lint
 
       - name: check for uncommitted changes
         run: |
@@ -112,4 +112,4 @@ jobs:
       # TODO: add some node tests
       #
       # - name: run node tests
-      #   run: cargo xtask node-test
+      #   run: cargo xtask node test
