--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -6,7 +6,8 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0"
 clap = { version = "4.5", features = ["derive"] }
-semver = "1.0"
+semver = { version = "1.0", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["preserve_order"] }
 toml = "0.8"
 xshell = "0.2"
